# claude-personal-config

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  QWEN.md  bug-analysis.md  ccr-config.template.json  init_ccr.sh  init_claude.sh  init_codex.sh  init_opencode.sh  init_qwen.sh  memory.md  opencode.json  sync.sh
.agent/: knowledge-gate.json
.claude/: settings.json
.githooks/: post-merge  post-rewrite  pre-commit  pre-push
.qwen/: settings.json
agents/: coding-expert-heavy.md  coding-expert-light.md  coding-expert.md  dev-expert.md  expert.md  plan-postcheck.md  plan-validator.md  scanner.md  skill-builder.md  skill-fetcher.md  skill-marker.md  skill-matcher.md  skill-preprocessor.md  skills.list  source-planner.md  stack-detector.md  test-auditor.md  test-expert.md
blocks/: .gitignore
blocks/commerce-product-list/component/backend/: pyproject.toml
blocks/commerce-product-list/component/backend/alembic/versions/: 20260512_0001_initial.py
blocks/commerce-product-list/component/backend/app/: auth.py  errors.py
blocks/commerce-product-list/component/backend/app/api/v1/: __init__.py  me.py  products.py
blocks/commerce-product-list/component/backend/app/models/: __init__.py
blocks/commerce-product-list/component/backend/app/schemas/: product.py
blocks/commerce-product-list/component/backend/app/services/: products.py
blocks/im-conversation-list/backend/: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
blocks/im-conversation-list/backend/alembic/: env.py
blocks/im-conversation-list/backend/app/: __init__.py  auth.py  db.py  deps.py
blocks/im-conversation-list/backend/app/api/v1/: conversations.py  messages.py
blocks/im-conversation-list/backend/app/models/: __init__.py  conversation.py  idempotency.py  user_conversation_state.py
blocks/im-conversation-list/backend/app/schemas/: __init__.py  content.py  message.py  pagination.py
blocks/im-conversation-list/backend/app/services/: __init__.py  conversations.py  events.py  messages.py
blocks/im-conversation-list/backend/scripts/: init-test-db.sql
blocks/im-conversation-list/backend/tests/: test_conversations_crud.py  test_conversations_list.py  test_me.py  test_messages_list.py
claude/: CLAUDE.md  CLAUDE.reason.md  Superpowers.md  plugins.list  skills.list.example
codex/: README.md  hooks.json  skills.list  superpowers-bootstrap.md
distill/: .env.example  README.md  agentic_install_builder.py  asset_builder.py  pipeline.py  pyproject.toml  sandbox_runner.py  tools.py
distill/templates/: install_helpers.sh  runner.sh.tmpl
distill/tests/: conftest.py  smoke_test.py  test_agentic_install.py  test_asset_builder.py  test_sandbox_runner.py
docs/: article-harness-not-prompts.md  codex-plugin-loader-superpowers.md  review-parent-workflow-sync.md
guidelines/: capability-taxonomy.md  coding-expert-rules.md  git-commit.md  knowledge-retrieval-process-main.md  knowledge-retrieval-process.md  skill-distillation.md  tech-stack-taxonomy.md
hooks/: capability-taxonomy-inject.sh  coding-expert-audit.sh  coding-expert-rules-inject.sh  git-commit-hint.sh  skill-intent-inject.sh  skill-resolve-inject.sh  skill-resolve-preflight.sh  stack-detector-print.sh  stack-list-inject.sh
intent-enhancement/: README.md  deploy.sh  pyproject.toml  requirements.txt  run_tests.py
intent-enhancement/config/: config.json
intent-enhancement/src/: __init__.py
intent-enhancement/src/integration/: __init__.py  enhanced_resolver.py  intent_enhanced_resolver.py  monitor.py
intent-enhancement/src/intent_recognition/: __init__.py  analyzer.py  completer.py  engine.py  parser.py  text_path_extractor.py
intent-enhancement/src/retrieval/: __init__.py  cache.py  dependency.py  embedding_cache.py  embedding_client.py  hybrid_engine.py  query_optimizer.py  ranker.py  vector_store.py
intent-enhancement/src/utils/: __init__.py  config.py
intent-enhancement/tests/: .gitignore  architecture_analysis.md  embedding_tag_extractor.py  eval_ollama_span.py  eval_path_extraction.py  intent_eval_dataset.json  intent_eval_report.md  intent_eval_results.json  intent_eval_run.py  intent_experiment_plan.md  intent_fallback_design.md  intent_fallback_regression.md  intent_fallback_regression_results.json  path_extraction_eval.json  path_extraction_eval_report.md  rule_based_extractor.py  tag_cards.json  test_embedding.py  test_query_optimizer.py  test_system.py  test_text_path_extractor.py
lists/: plugins.list  skills.list
mcp/block-catalog/: pyproject.toml
mcp/block-catalog/src/block_catalog/: __init__.py  catalog.py  cli.py  copier.py  server.py
mcp/skill-catalog/: README.md  catalog.toml  pyproject.toml
mcp/skill-catalog/data/: tag_cards.json
mcp/skill-catalog/docs/: intent-enhancement-integration.md
mcp/skill-catalog/src/skill_catalog/: __init__.py  classifier.py  cli.py  fingerprint.py  intent_fallback.py  lifecycle.py  pipeline.py  ranking.py  scanner.py  server.py
mcp/skill-catalog/tests/: test_classifier.py  test_cli_get.py  test_fingerprint.py  test_intent_enhancement_integration.py  test_lifecycle.py  test_ranking.py  test_resolve_e2e.py  test_resolve_pipeline.py  test_scanner.py  test_scanner_available_tags.py
mcp/skill-catalog/tests/fixtures/: golden_cases.yaml
opencode/: opencode-permission.json
opencode-plugins/: event-probe.js  git-commit-hint.js
scripts/: audit-frontmatter.py  ccr-test-provider.sh  claude-launchers.zsh  configure-codexcollector-memory.sh  install-knowledge-gate.sh  new-block.py  opencode-subagent-event-probe.mjs  test-configure-codexcollector-memory.sh  (+3 more)
(+1880 files in other folders)
