[project]
name = "block-catalog"
version = "0.1.0"
description = "MCP server for discovering & copying business-pattern blocks as SDK templates"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
block-catalog-cli = "block_catalog.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
