[project]
name = "im-conversation-list-backend"
version = "0.1.0"
description = "Backend service for the im-conversation-list business pattern block."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-ulid>=3.0",
  "pyjwt[crypto]>=2.10",
  "structlog>=24.4",
  "websockets>=14.1",
  "anyio>=4.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "asgi-lifespan>=2.1",
  "mypy>=1.13",
  "ruff>=0.8",
  "faker>=33.0",
]

[project.scripts]
imcl-seed = "app.scripts.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:app.*"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"alembic/*" = ["E501"]
