[project]
name = "commerce-product-list-backend"
version = "0.1.0"
description = "Backend for commerce-product-list block."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-ulid>=3.0",
  "pyjwt[crypto]>=2.10",
  "structlog>=24.4",
  "anyio>=4.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "asgi-lifespan>=2.1",
  "ruff>=0.8",
  "faker>=33.0",
]

[project.scripts]
cpl-seed = "app.scripts.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["../../dev/backend/tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"
